# rs-qwesty

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: README.md  basic_delete.rs  basic_get.rs  basic_post.rs  basic_post_empty.rs  basic_put.rs  error_handling.rs  response_inspection.rs
src/: main.rs
src/http/: mod.rs
src/http/reqwest/: client.rs  delete.rs  get.rs  mod.rs  post.rs  put.rs  response_handler.rs
src/http/reqwest/fixtures/: assets_response_bad.json  assets_response_good.json
src/models/: error.rs  mod.rs  response.rs
