[package]
name = "qwesty"
version = "0.0.1"
edition = "2021"
authors = ["Pushpinder Singh <pushpindersingh89@hotmail.com>"]
keywords = ["http-client", "reqwest-wrapper"]

[dependencies]
reqwest-middleware = { version = "0.3.3", features = [
    "json",
    "multipart",
    "rustls-tls",
] }
reqwest-retry = "0.6.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
